[package]
name = "reth-private-transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-cli = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "v1.1.3" }
alloy-primitives = "0.8.15"

serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
serde_json = "1.0.133"

thiserror = "2.0.7"
futures = "0.3.31"
reqwest = "0.12.9"
jsonrpsee = { version = "0.24.7", features = ["server", "macros"] }